--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /seccion8_4/build/
+/seccion10_3/nbproject/private/
+/seccion10_3/build/
+/seccion10_4/nbproject/private/
+/seccion10_4/build/
+/seccion10_4/dist/
+/seccion10_5/nbproject/private/
+/seccion10_6/nbproject/private/
+/seccion10_6/build/
+/seccion10_5/build/
