--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 /seccion10_6/nbproject/private/
 /seccion10_6/build/
 /seccion10_5/build/
+/seccion9_2/nbproject/private/
+/seccion9_2/build/
+/seccion9_3/nbproject/private/
+/seccion9_3/build/
+/seccion9_4/nbproject/private/
